comment products to test bug hypotesis

--- a/sections/product-list-all.liquid
+++ b/sections/product-list-all.liquid
@@ -764,6 +764,8 @@
                 </div>
               </div>
             {% endif %}
+
+            {% comment %}
           {% if all_products['mira-stainless-steel-bottle'].available == true %}   
           <div class="col-md-12">
             <div class="product-col">
@@ -814,7 +816,7 @@
               </div>
           </div>
         {% endif %}
-
+      {% endcomment %}
           
           {% endif %}
 
