Max kit feedback

--- a/sections/section-customer-stories.liquid
+++ b/sections/section-customer-stories.liquid
@@ -16,6 +16,18 @@
                     <p class="badge-description" >While you do your morning skincare, Mira measures your 3 key fertility hormones and translates them into numbers. All in 21 minutes.</p>
                 </div>
             </div>
+          <div class="col-md-12">
+                <div class="customers-product-col" style="background:#EAF3EF">
+                    <span class="badge-heading" style="background:#D5E7DF;">Smart AI:</span>
+                    <p class="badge-description" >Mira’s AI is the only one of its kind. Trained on over 8.5 million hormone data points, no other hormone monitor offers an experience like Mira.</p>
+                </div>
+            </div>
+          <div class="col-md-12">
+                <div class="customers-product-col" style="background:#FDF7EA">
+                    <span class="badge-heading" style="background:#F6E1A9;">Made for Everyone:</span>
+                    <p class="badge-description" >Mira works for PCOS, irregular cycles, or hormone imbalances due to its highly sensitive tech that can read higher hormone ranges.</p>
+                </div>
+            </div>
          
             
         </div>
