--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -442,7 +442,14 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QC5SFQ36FV"></script>
     <script>
+
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QC5SFQ36FV')
       window.Shopify = window.Shopify || {theme: {id: {{ theme.id }}, role: '{{ theme.role }}' } };
       window._template = {
           directory: "{{ template.directory }}",
