--- a/templates/product.virtual_consultations.liquid
+++ b/templates/product.virtual_consultations.liquid
@@ -1,90 +1,80 @@
 {{ 'collumndual.css' | asset_url | stylesheet_tag }}
-
 {% assign sub_folder = '' %}
 {% if localization.market.handle == 'au' %}
-  {% assign sub_folder = '/en-au' %}
+{% assign sub_folder = '/en-au' %}
 {% elsif localization.market.handle == 'ca' %}
-  {% assign sub_folder = '/en-ca' %}
+{% assign sub_folder = '/en-ca' %}
 {% elsif localization.market.handle == 'eu' %}
-  {% assign sub_folder = '/en-eu' %}
+{% assign sub_folder = '/en-eu' %}
 {% elsif localization.market.handle == 'uk' %}
-  {% assign sub_folder = '/en-gb' %}
+{% assign sub_folder = '/en-gb' %}
 {% elsif localization.market.handle == 'international' %}
-  {% assign sub_folder = '/en-int' %}
+{% assign sub_folder = '/en-int' %}
 {% else %}
-  {% assign sub_folder = '' %}
+{% assign sub_folder = '' %}
 {% endif %}
-
 <div class="product-listing-page new-layout-listing padd-t-b-60">
-  <div class="product-listing-sec">
-    <div class="container">
-      {% render 'shop-all-tab' %}
-      <div class="product-list-row">
-        <div class="heading-1 padd-m-t-0 text-left">
-          <h3>Virtual Consultations</h3>
-        </div>
-        <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
-          {% if all_products.coaching.available == true %}            
-            <div class="col-md-4">
-              <div class="product-col">
-                <div class="product-img-col">
-                  <a href="{{ sub_folder }}/products/coaching"
-                    ><img src="{{ 'Virtual_OBGYN_Consultation.png' | file_img_url: '' }}" alt=""
-                  ></a>
+    <div class="product-listing-sec">
+        <div class="container">
+            {% render 'shop-all-tab' %}
+            <div class="product-list-row">
+                <div class="heading-1 padd-m-t-0 text-left">
+                    <h3>Virtual Consultations</h3>
                 </div>
-                <h4>
-                  <a href="{{ sub_folder }}/products/coaching">{{ all_products.coaching.title }}</a>
-                </h4>
-                <p>{{ all_products.coaching.metafields.product_fields.sub_title }}</p>
-                <div class="product-price-col">
-                  <div class="price-btn-row">
-                    <span class="plat-price">{{ all_products.coaching.first_available_variant.price | money }}</span>
-                    <div class="old-price">{{ all_products.coaching.compare_at_price | money }}</div>
-                  </div>
-  
-                  {% include 'subscription-plp-endrock', with string_variable: 'coaching', with sub_folder: sub_folder, with num: 32 %}
-  
-                  <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
+                <div id="productlist" class="row accessories-product-list bundles-product-list col-grid">
+                    {% if all_products.coaching.available == true %}
+                    <div class="col-md-4">
+                        <div class="product-col">
+                            <div class="product-img-col">
+                                <a href="{{ sub_folder }}/products/coaching"><img src="{{ 'Virtual_OBGYN_Consultation.png' | file_img_url: '' }}" alt=""></a>
+                                {% include 'product-offer-badge', with offer_label: 'NEW' %}
+                            </div>
+                            <h4>
+                                <a href="{{ sub_folder }}/products/coaching">{{ all_products.coaching.title }}</a>
+                            </h4>
+                            <p>{{ all_products.coaching.metafields.product_fields.sub_title }}</p>
+                            <div class="product-price-col">
+                                <div class="price-btn-row">
+                                    <span class="plat-price">{{ all_products.coaching.first_available_variant.price | money }}</span>
+                                    <div class="old-price">{{ all_products.coaching.compare_at_price | money }}</div>
+                                </div>
+                                {% include 'subscription-plp-endrock', with string_variable: 'coaching', with sub_folder: sub_folder, with num: 32 %}
+                                <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink" data-plpBtn="true">Buy&nbsp;now</a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
                 </div>
-              </div>
             </div>
-          {% endif %}
+            <div class="mira-flat-banner mira-fertility-banner">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="flat-banner-left text-white">
+                            <div class="flat-banner-left-inner">
+                                <h5>
+                                    Discover<br class="medium-up--hide">
+                                    the<br class="small--hide">
+                                    science<br class="medium-up--hide">
+                                    behind Mira
+                                </h5>
+                                <a href="https://www.miracare.com/science/" class="btn-custom white-btn" target="_blank">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="flat-banner-right">
+                            <a href="https://www.miracare.com/science/" target="_blank">
+                                <img src="{{ 'discover_science_banner_mobile.png' | file_img_url: '' }}" alt="" class="hide-dextop flat-banner-mobile">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="mira-flat-banner mira-fertility-banner">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="flat-banner-left text-white">
-              <div class="flat-banner-left-inner">
-                <h5>
-                  Discover<br class="medium-up--hide">
-                  the<br class="small--hide">
-                  science<br class="medium-up--hide">
-                  behind Mira
-                </h5>
-                <a href="https://www.miracare.com/science/" class="btn-custom white-btn" target="_blank">Learn More</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="flat-banner-right">
-              <a href="https://www.miracare.com/science/" target="_blank">
-                <img
-                  src="{{ 'discover_science_banner_mobile.png' | file_img_url: '' }}"
-                  alt=""
-                  class="hide-dextop flat-banner-mobile"
-                >
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 </div>
-
 <script>
-  // access the every one mont subscription: all_products['fertility-plus-test-wands'].selling_plan_groups[0].selling_plans[0].id
-  const product = {{ all_products['fertility-plus-test-wands'].selling_plan_groups[0] | json }}
-  console.log('The Product:', product)
+// access the every one mont subscription: all_products['fertility-plus-test-wands'].selling_plan_groups[0].selling_plans[0].id
+const product = { { all_products['fertility-plus-test-wands'].selling_plan_groups[0] | json } }
+console.log('The Product:', product)
 </script>
