--- a/sections/cw-whats-inside.liquid
+++ b/sections/cw-whats-inside.liquid
@@ -4,8 +4,8 @@
     <div class="product-kit-tabs">
        <ul class="nav nav-pills" role="tablist">
       <li class="nav-item active"> <a href="#tab01" class="nav-link" data-toggle="pill">Product Details & Specifications</a> </li>
-      <li class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill"> Warranty/Return Policy</a> </li>
-      <li class="nav-item"> <a href="#tab04" class="nav-link" data-toggle="pill">Order Delivery Times</a> </li>
+      <li style="display:none;" class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill"> Warranty/Return Policy</a> </li>
+      <li style="display:none;" class="nav-item"> <a href="#tab04" class="nav-link" data-toggle="pill">Order Delivery Times</a> </li>
   
     </ul>
     <div class="tab-content">
@@ -54,7 +54,7 @@
 
 
   
-      <div class="tab-pane" id="tab03">
+      <div class="tab-pane" id="tab03" style="display:none;">
   
         <div class="row">
 
@@ -84,7 +84,7 @@
   
   
   
-      <div class="tab-pane" id="tab04">
+      <div class="tab-pane" id="tab04" style="display:none;">
   
         <div class="row">
 
