--- a/sections/ex-whats-inside.liquid
+++ b/sections/ex-whats-inside.liquid
@@ -4,7 +4,7 @@
          <ul class="nav nav-pills" role="tablist">
             <li class="nav-item active"> <a href="#tab01" class="nav-link" data-toggle="pill">What’s Inside</a> </li>
             <li class="nav-item"> <a href="#tab02" class="nav-link" data-toggle="pill">Product Details</a> </li>
-            <li class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill"> Warranty/Return Policy</a> </li>
+            <li style="display:none;" class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill"> Warranty/Return Policy</a> </li>
        
          </ul>
          <div class="tab-content">
@@ -56,7 +56,7 @@
                   <div class="tab-vactor-col"><img src="{{ 'what_inside_vactor02.svg' | file_url }}" alt=""></div>
                </div>
             </div>
-            <div class="tab-pane" id="tab03">
+            <div class="tab-pane" id="tab03" style="display:none;">
                <div class="tab-content-globel">
                   
                   <div class="tab-text-row">
