--- a/sections/product-specifications.liquid
+++ b/sections/product-specifications.liquid
@@ -4,8 +4,8 @@
             <ul class="nav nav-pills" role="tablist">
                 <li class="nav-item active"> <a href="#tab01" class="nav-link" data-toggle="pill">Product Details & Specifications</a> </li>
                 <li style="display:none;" class="nav-item"> <a href="#tab02" class="nav-link" data-toggle="pill">Product Details</a> </li>
-                <li class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill"> Warranty/Return Policy</a> </li>
-                <li class="nav-item"> <a href="#tab04" class="nav-link" data-toggle="pill">Order Delivery Times</a> </li>
+                <li style="display:none;" class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill"> Warranty/Return Policy</a> </li>
+                <li style="display:none;" class="nav-item"> <a href="#tab04" class="nav-link" data-toggle="pill">Order Delivery Times</a> </li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="tab01">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane" id="tab03">
+                <div class="tab-pane" id="tab03" style="display:none;">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="pro-kit-tab-text">
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane" id="tab04">
+                <div class="tab-pane" id="tab04" style="display:none;">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="pro-kit-tab-text">
