--- a/sections/yo-whats-inside.liquid
+++ b/sections/yo-whats-inside.liquid
@@ -4,8 +4,8 @@
          <ul class="nav nav-pills" role="tablist">
             <li class="nav-item active"> <a href="#tab01" class="nav-link" data-toggle="pill">What’s Inside</a></li>
             <li class="nav-item"> <a href="#tab02" class="nav-link" data-toggle="pill">Product Details</a></li>
-            <li class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill">Warranty/Return Policy</a></li>
-           <li class="nav-item"> <a href="#tab04" class="nav-link" data-toggle="pill">Order Delivery Times</a></li>
+            <li style="display:none;" class="nav-item"> <a href="#tab03" class="nav-link" data-toggle="pill">Warranty/Return Policy</a></li>
+           <li style="display:none;" class="nav-item"> <a href="#tab04" class="nav-link" data-toggle="pill">Order Delivery Times</a></li>
        
          </ul>
          <div class="tab-content">
@@ -62,7 +62,7 @@
 
                </div>
             </div>
-            <div class="tab-pane" id="tab03">
+            <div class="tab-pane" id="tab03" style="display:none;">
                   
               <div class="tab-content-globel">
                   <div class="tab-text-row">
@@ -82,7 +82,7 @@
            
             </div>
            
-                <div class="tab-pane" id="tab04">
+                <div class="tab-pane" id="tab04" style="display:none;">
                <div class="tab-content-globel">
                  
                   
