--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -475,6 +475,7 @@
     {% sections 'header-group' %}
     <div id="om-emfefa01a70ipincu7s0-holder"></div>
     <div id="om-ebmyg76gzxqf6qcgvacc-holder"></div>
+    <div id="om-l8ysovgxvoactc4hs85q-holder"></div>
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
