--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -180,7 +180,7 @@
                       {% endif %}
                       </div> 
                     </div>
-        
+                    <div data-rebuy-id="137009" data-rebuy-shopify-product-ids="{{ product.id }}"></div>
                       <div {{ block.shopify_attributes }}>
                         {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
                         {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
@@ -383,6 +383,7 @@
                             {% endif %}
                           </div>
                         </div>
+                        <div data-rebuy-id="137009" data-rebuy-shopify-product-ids="{{ product.id }}"></div>
                         <div {{ block.shopify_attributes }}>
                           {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
                           {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
