hot fix new icon in some products mobile

--- a/sections/bf-bundle-sections.liquid
+++ b/sections/bf-bundle-sections.liquid
@@ -26,7 +26,7 @@
                 <span class="plat-price">{{ all_products['get-pregnant-bundle'].price | money }}</span>
                 <div class="old-price">{{ all_products['get-pregnant-bundle'].compare_at_price | money }}</div>
             </div>
-            <div class="bf-bundle-banner-btn product-form__buttons">
+            <div class="bf-bundle-banner-btn product-form-custom">
                 <form method="post" action="{{ sub_folder }}/cart/add" class="add-to-cart">
                     <input type="hidden" name="quantity" value="1">
                     <input type="hidden" name="id" value="{{ product.variants.first.id }}" />
