--- a/sections/bf-wands-bundle-sections.liquid
+++ b/sections/bf-wands-bundle-sections.liquid
@@ -15,7 +15,7 @@
 
 {% render 'sticky-atc' %}
 
-<section id="atc-section" class="bf-bundle-header-banner product-form__buttons">
+<section id="atc-section" class="bf-bundle-header-banner product-form-custom">
     <div class="container">
         <div class="bf-bundle-banner-content">
             <div class="limited-edition-label"><span>Limited Edition!</span></div>
