--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -462,6 +462,7 @@
 
   <body
     class="gradient template-{{ template | split: '.' | first }} {{ template }}{% if template == "product" %} {{ product.handle }}{% endif %} {% for tag in product.tags %} {{ tag }}{% endfor %}"
+    data-sticky-original
   >
   {% render 'sticky-atc' %}
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
