--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -662,7 +662,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- Widget : Gift with Purchase - HAW Merch -->
-    <div data-rebuy-id="134542"></div>
+    <div data-rebuy-id="134542" style="display:none;"></div>
     <!-- End Widget : Gift with Purchase - HAW Merch -->
   </body>
 </html>
