--- a/sections/malomo_order_tracking.liquid
+++ b/sections/malomo_order_tracking.liquid
@@ -1,3 +1,17 @@
+{% assign sub_folder = '' %}
+{% if localization.market.handle == 'au' %}
+  {% assign sub_folder = '/en-au' %}
+{% elsif localization.market.handle == 'ca' %}
+  {% assign sub_folder = '/en-ca' %}
+{% elsif localization.market.handle == 'eu' %}
+  {% assign sub_folder = '/en-eu' %}
+{% elsif localization.market.handle == 'uk' %}
+  {% assign sub_folder = '/en-gb' %}
+{% elsif localization.market.handle == 'international' %}
+  {% assign sub_folder = '/en-int' %}
+{% else %}
+  {% assign sub_folder = '' %}
+{% endif %}
 <div class="traking-sec" style="background-image:url(https://cdn.shopify.com/s/files/1/0755/9620/2277/files/order_form_bg.png);">
   <div class="traking-mobile-banner"><img src="{{ 'order_form_bg.png' | file_img_url: '' }}"></div>
     <div class="container">
@@ -29,96 +43,117 @@
                 </div> 
                 
                 <div class="row accessories-product-list bundles-product-list"> 
-                    <div class="col-md-4">
-                      <div class="product-col">
-                         <div class="product-img-col"><a href="/products/fertility-plus-test-wands"><img src="{{ '20_Mira_Fertility_Plus_Wands.png' | file_img_url: '' }}" alt="" /></a>
-                         </div>
-                         <h4><a href="/products/fertility-plus-test-wands">{{ all_products['fertility-plus-test-wands'].title }}</a></h4>
-                         <p>({{ all_products['fertility-plus-test-wands'].metafields.product_fields.sub_title }})</p>
-                         <div class="product-price-col">
-                            <div class="price-btn-row">
-                               <span class="plat-price">{{ all_products['fertility-plus-test-wands'].price | money }}</span>
-                               <div class="old-price">{{ all_products['fertility-plus-test-wands'].compare_at_price | money }}</div>
-                            </div>
-                            <a href="/products/fertility-plus-test-wands" class="btn-custom btn-pink">Buy now</a>
-                         </div>
-                      </div>
-                   </div> 
-
+                    
                     <div class="col-md-4">
                       <div class="product-col">
                          <div class="product-img-col">
-                            <a href="/products/mira-max-test-wands"><img src="{{ '20_Mira_Fertility_MAX_Wands.png' | file_img_url: '' }}" alt="" /></a>                      
+                            <a href="{{ sub_folder }}/products/mira-max-test-wands"><img src="{{ '20_Mira_Fertility_MAX_Wands.png' | file_img_url: '' }}" alt="" /></a>                      
                          </div>
-                         <h4><a href="/products/mira-max-test-wands">{{ all_products['mira-max-test-wands'].title }}</a></h4>
-                         <p>({{ all_products['mira-max-test-wands'].metafields.product_fields.sub_title }})</p>
+                         <h4><a href="{{ sub_folder }}/products/mira-max-test-wands">{{ all_products['mira-max-test-wands'].title }}</a></h4>
+                         <p>{{ all_products['mira-max-test-wands'].metafields.product_fields.sub_title }}</p>
                          <div class="product-price-col">
                             <div class="price-btn-row">
                                <span class="plat-price">{{ all_products['mira-max-test-wands'].price | money }}</span>
                                <div class="old-price">{{ all_products['mira-max-test-wands'].compare_at_price | money }}</div>
                             </div>
-                            <a href="/products/mira-max-test-wands" class="btn-custom btn-pink">Buy now</a>
+                            <a href="{{ sub_folder }}/products/mira-max-test-wands" class="btn-custom btn-pink">Buy now</a>
                          </div>
                       </div>
                    </div>
                   <div class="col-md-4">
                     <div class="product-col">
                        <div class="product-img-col">
-                          <a href="/products/fertility-ovum-wands"><img src="{{ '20_Mira_Ovum_Wands.png' | file_img_url: '' }}" alt="" /></a>
+                          <a href="{{ sub_folder }}/products/fertility-ovum-wands"><img src="{{ '20_Mira_Ovum_Wands.png' | file_img_url: '' }}" alt="" /></a>
                        </div>
-                       <h4><a href="/products/fertility-ovum-wands">{{ all_products['fertility-ovum-wands'].title }}</a></h4>
-                       <p>({{ all_products['fertility-ovum-wands'].metafields.product_fields.sub_title }})</p>
+                       <h4><a href="{{ sub_folder }}/products/fertility-ovum-wands">{{ all_products['fertility-ovum-wands'].title }}</a></h4>
+                       <p>{{ all_products['fertility-ovum-wands'].metafields.product_fields.sub_title }}</p>
                        <div class="product-price-col">
                           <div class="price-btn-row">
                              <span class="plat-price">{{ all_products['fertility-ovum-wands'].price | money }}</span>
                              <div class="old-price">{{ all_products['fertility-ovum-wands'].compare_at_price | money }}</div>
                           </div>
-                          <a href="/products/fertility-ovum-wands" class="btn-custom btn-pink">Buy now</a>
+                          <a href="{{ sub_folder }}/products/fertility-ovum-wands" class="btn-custom btn-pink">Buy now</a>
                        </div>
                     </div>
                  </div>
+                  {% if localization.market.handle == 'us' %}
+                      <div class="col-md-4">
+                          <div class="product-col">
+                              <div class="product-img-col">
+                                  <a href="{{ sub_folder }}/products/basal-body-thermometer"><img src="{{ 'bbt-shop.png' | file_img_url: '' }}" alt=""></a>
+                                  {% include 'product-offer-badge', with offer_label: 'NEW' %}
+                              </div>
+                              <h4>
+                                  <a href="{{ sub_folder }}/products/basal-body-thermometer">
+                                      {{- all_products['basal-body-thermometer'].title -}}
+                                  </a>
+                              </h4>
+                              <p>{{ all_products.basal-body-thermometer.metafields.product_fields.sub_title }}</p>
+                              <div class="product-price-col">
+                                  <div class="price-btn-row">
+                                      <span class="plat-price">{{ all_products['basal-body-thermometer'].price | money }}</span>
+                                      <div class="old-price"></div>
+                                  </div>
+                                  <a href="{{ sub_folder }}/products/basal-body-thermometer" class="btn-custom btn-pink">Buy now</a>
+                              </div>
+                          </div>
+                      </div>
+                    {% endif %}
                     <div class="col-md-4">
                         <div class="product-col">
                             <div class="product-img-col">
-                                <a href="/products/prenatal-multivitamin"><img src="{{ 'Prenatal-multi-vitamins.png' | file_img_url: '' }}" alt="" /></a>
+                                <a href="{{ sub_folder }}/products/prenatal-multivitamin"><img src="{{ 'Prenatal-multi-vitamins.png' | file_img_url: '' }}" alt="" /></a>
                             </div>
-                            <h4><a href="/products/prenatal-multivitamin">{{ all_products['prenatal-multivitamin'].title }}</a></h4>
-                            <p></p>
+                            <h4><a href="{{ sub_folder }}/products/prenatal-multivitamin">{{ all_products['prenatal-multivitamin'].title }}</a></h4>
+                            <p>{{ all_products.prenatal-multivitamin.metafields.product_fields.sub_title }}</p>
                             <div class="product-price-col">
                                 <div class="price-btn-row">
                                     <span class="plat-price">{{ all_products['prenatal-multivitamin'].price | money }}</span>
                                 </div>
-                                <a href="/products/prenatal-multivitamin" class="btn-custom btn-pink">Buy now</a>
+                                <a href="{{ sub_folder }}/products/prenatal-multivitamin" class="btn-custom btn-pink">Buy now</a>
                             </div>
                         </div>
                     </div>
 
-                  <div class="col-md-4">
-                  <div class="product-col">
-                     <div class="product-img-col"><a href="/products/fertility-meditations"><img src="{{ 'Meditation_Playlist2.jpg' | file_img_url: '' }}" alt="" /></a>
-                     </div>
-                     <h4><a href="/products/fertility-meditations">{{ all_products['fertility-meditations'].title }}</a></h4>
-                     <p></p>
-                     <div class="product-price-col">
-                        <div class="price-btn-row">
-                           <span class="plat-price">{{ all_products['fertility-meditations'].price | money }}</span>
+                  {% if localization.market.handle == 'us' %}
+                    <div class="col-md-4">
+                        <div class="product-col">
+                            <div class="product-img-col">
+                                <a href="{{ sub_folder }}/products/panorama-fertility-lab-test"><img src="{{ 'panorama-shop-all.png' | file_img_url: '' }}" alt=""></a>
+                            </div>
+                            <h4>
+                                <a href="{{ sub_folder }}/products/panorama-fertility-lab-test">
+                                    {{- all_products['panorama-fertility-lab-test'].title -}}
+                                </a>
+                            </h4>
+                            <p>{{ all_products.panorama-fertility-lab-test.metafields.product_fields.sub_title }}</p>
+                            <div class="product-price-col">
+                                <div class="price-btn-row">
+                                    <span class="plat-price">{{ all_products['panorama-fertility-lab-test'].price | money }}</span>
+                                    <div class="old-price"></div>
+                                </div>
+                                <a href="{{ sub_folder }}/products/panorama-fertility-lab-test" class="btn-custom btn-pink">Buy now</a>
+                            </div>
                         </div>
-                        <a href="/products/fertility-meditations" class="btn-custom btn-pink">Buy now</a>
-                     </div>
-                  </div>
-               </div>
+                    </div>
+                    {% endif %}
                   
                     <div class="col-md-4">
                         <div class="product-col">
-                            <div class="product-img-col"><a href="/products/academy"><img src="{{ 'Online_Fertility_Course2.jpg' | file_img_url: '' }}" alt="" /></a>
+                            <div class="product-img-col">
+                                <a href="{{ sub_folder }}/products/coaching"><img src="{{ 'Virtual_OBGYN_Consultation.png' | file_img_url: '' }}" alt=""></a>
+                                {% include 'product-offer-badge', with offer_label: 'NEW' %}
                             </div>
-                            <h4><a href="/products/academy">Online Fertility Course</a></h4>
-                            <p></p>
+                            <h4>
+                                <a href="{{ sub_folder }}/products/coaching">{{ all_products.coaching.title }}</a>
+                            </h4>
+                            <p>{{ all_products.coaching.metafields.product_fields.sub_title }}</p>
                             <div class="product-price-col">
                                 <div class="price-btn-row">
-                                    <span class="plat-price">{{ all_products['academy'].price | money }}</span>
+                                    <span class="plat-price">{{ all_products.coaching.first_available_variant.price | money }}</span>
+                                    <div class="old-price"></div>
                                 </div>
-                                <a href="/products/academy" class="btn-custom btn-pink">Buy now</a>
+                                <a href="{{ sub_folder }}/products/coaching" class="btn-custom btn-pink">Buy now</a>
                             </div>
                         </div>
                     </div>
@@ -137,14 +172,14 @@
             <div class="col-md-6">
                 <div class="signup-item purple-bg">
                     <p>Sign up for our SMS and
-                        get $15 off your next order</p>
-                    <a href="https://mira.attn.tv/p/xgS/landing-page" target="_blank" class="btn-custom btn-pink">Sign Up</a>
+                        get $10 off your next order</p>
+                    <a href="/products#sms" target="_blank" class="btn-custom btn-pink">Sign Up</a>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="signup-item mat-green-bg">
                     <p>Join our loyalty program to unlock special offers</p>
-                    <a href="https://usd.miracare.com/account" target="_blank" class="btn-custom btn-pink">Join now</a>
+                    <a href="/account" target="_blank" class="btn-custom btn-pink">Join now</a>
                 </div>
             </div>
         </div>
@@ -162,7 +197,7 @@
                         <img src="{{ 'easy_start_guide.jpg' | file_img_url: '' }}" alt="">
                     </div>
                     <div class="guide-info">
-                        <h4><a href="https://www.miracare.com/blog/how-to-test-with-mira-fertility-plus/" target="_blank">Check our Easy Start Guide to test with the Mira Analyzer.</a></h4>
+                        <h4><a href="https://www.miracare.com/blog/how-to-test-with-mira-fertility-plus/" target="_blank">Check our Easy Start Guide to test with the Mira Monitor.</a></h4>
                         <a href="https://www.miracare.com/blog/how-to-test-with-mira-fertility-plus/" class="btn-custom btn-pink">Learn More</a>
                     </div>
                 </div>
@@ -173,7 +208,7 @@
                         <img src="{{ 'success-stories-cta.jpg' | file_img_url: '' }}" alt="">
                     </div>
                     <div class="guide-info">
-                        <h4><a href="https://www.miracare.com/success-stories/" target="_blank">77% of Mira users conceived during the first 3 cycles of using Mira. Browse through our success stories.</a></h4>
+                        <h4><a href="https://www.miracare.com/success-stories/" target="_blank">84% of Mira users conceived during the first 6 cycles of using Mira. Browse through our success stories.</a></h4>
                         <a href="https://www.miracare.com/success-stories/" class="btn-custom btn-pink">Success Stories</a>
                     </div>
                 </div>
